--- a/assets/main.css
+++ b/assets/main.css
@@ -95,7 +95,7 @@ table td { border: 1px solid #e8e8e8; }
 @media screen and (max-width: 600px) { .site-nav { position: absolute; top: 9px; right: 15px; background-color: #fdfdfd; border: 1px solid #e8e8e8; border-radius: 5px; text-align: right; } .site-nav label[for="nav-trigger"] { display: block; float: right; width: 36px; height: 36px; z-index: 2; cursor: pointer; } .site-nav .menu-icon { display: block; float: right; width: 36px; height: 26px; line-height: 0; padding-top: 10px; text-align: center; } .site-nav .menu-icon > svg { fill: #424242; } .site-nav input ~ .trigger { clear: both; display: none; } .site-nav input:checked ~ .trigger { display: block; padding-bottom: 5px; } .site-nav .page-link { display: block; padding: 5px 10px; margin-left: 20px; } .site-nav .page-link:not(:last-child) { margin-right: 0; } }
 
 /** Site footer */
-.site-footer { border-top: 1px solid #e8e8e8; padding: 30px 0; }
+.site-footer { border-top: 1px solid #e8e8e8; padding: 0 0 30px; }
 
 .footer-heading { font-size: 18px; margin-bottom: 15px; }
 
@@ -274,6 +274,8 @@ table td { border: 1px solid #e8e8e8; }
 
 .highlight .il { color: #099; }
 
+/*Styling navbar*/
+/*Adapted from : https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar*/
 ul.navi { list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: white; float: right; }
 
 ul.navi li { float: left; }
@@ -292,6 +294,11 @@ li.dropdown { display: inline-block; }
 
 .dropdown:hover .dropdown-content { display: block; }
 
-/*Adapted from : https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar*/
+/*Styling footer*/
+.site-footer { border-top: 1px solid #e8e8e8; padding: 10px 0 0; }
+
+.footer-col-wrapper { margin-left: -15px; }
+
+.footer-col-2 { float: left; margin-bottom: 15px; padding-left: 15px; }
 
 /*# sourceMappingURL=main.css.map */
